--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 _AI_PROJECT_CONTEXT.md
 a.ipynb
-03-Matplotlib
-04-Seaborn
+03-Matplotlib/06-Matplotlib-Advanced.md
+04-Seaborn/08-Seaborn-Advanced.md
 05-Advanced-Visualization
